@@ -4,7 +4,7 @@
 		<integer nullable="false" identity="true"/>
 	</column>
 	<column name="KeyText">
-		<varchar length="10" nullable="false"/>
+		<varchar length="50" nullable="false"/>
 	</column>
 	<column name="UserSecurityToken">
 		<varchar length="50" nullable="false"/>
